// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Link > Link baseVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-6433c7b8=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-6433c7b8=""
    href="/mobile-vue/overview"
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium t-link--hover"
    data-v-6433c7b8=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
</div>
`;

exports[`Link > Link linkSizeVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-81744b9c=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--small"
    data-v-81744b9c=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       S跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-81744b9c=""
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="jump"
        >
          <path
            d="M9 4L4 4L4 20L20 20L20 15"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
          <path
            d="M19.25 4.75L12 12M14 4H20L20 10"
            id="stroke2"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-81744b9c=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       M跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-81744b9c=""
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="jump"
        >
          <path
            d="M9 4L4 4L4 20L20 20L20 15"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
          <path
            d="M19.25 4.75L12 12M14 4H20L20 10"
            id="stroke2"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--large"
    data-v-81744b9c=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       L跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-81744b9c=""
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="jump"
        >
          <path
            d="M9 4L4 4L4 20L20 20L20 15"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
          <path
            d="M19.25 4.75L12 12M14 4H20L20 10"
            id="stroke2"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </span>
  </a>
</div>
`;

exports[`Link > Link mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Link 链接
  </h1>
  <p
    class="summary"
  >
    当功能使用图标即可表意清楚时，可使用纯图标悬浮按钮，例如：添加、发布。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-6433c7b8=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-6433c7b8=""
          href="/mobile-vue/overview"
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium t-link--hover"
          data-v-6433c7b8=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        下划线文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-215729b2=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium t-link--underline"
          data-v-215729b2=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium t-link--underline t-link--hover"
          data-v-215729b2=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
            跳转链接
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        前置图标文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-00ec48a6=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium t-link--underline t-link--hover"
          data-v-00ec48a6=""
          target=""
        >
          <span
            class="t-link__prefix-icon"
          >
            
            <svg
              class="t-icon t-icon-link"
              data-v-00ec48a6=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="link"
              >
                <path
                  d="M11.6762 6.99023L13.9998 4.6666C15.4726 3.19382 17.8604 3.19382 19.3332 4.6666C20.806 6.13938 20.806 8.52723 19.3332 10L17.0096 12.3236M6.98974 11.6766L4.66611 14.0003C3.19333 15.4731 3.19333 17.8609 4.66611 19.3337C6.13889 20.8065 8.52675 20.8065 9.99953 19.3337L12.3232 17.0101M13.9985 9.99989L9.99847 14"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <!---->
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-00ec48a6=""
          target=""
        >
          <span
            class="t-link__prefix-icon"
          >
            
            <svg
              class="t-icon t-icon-link"
              data-v-00ec48a6=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="link"
              >
                <path
                  d="M11.6762 6.99023L13.9998 4.6666C15.4726 3.19382 17.8604 3.19382 19.3332 4.6666C20.806 6.13938 20.806 8.52723 19.3332 10L17.0096 12.3236M6.98974 11.6766L4.66611 14.0003C3.19333 15.4731 3.19333 17.8609 4.66611 19.3337C6.13889 20.8065 8.52675 20.8065 9.99953 19.3337L12.3232 17.0101M13.9985 9.99989L9.99847 14"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <!---->
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        后置图标文字链接
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-a3d673c9=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-a3d673c9=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-a3d673c9=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-a3d673c9=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-a3d673c9=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        不同主题
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-f45dd796=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--default t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--danger t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
      </div>
      <div
        class="tdesign-mobile-link-demo"
        data-v-f45dd796=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--success t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--warning t-link--medium"
          data-v-f45dd796=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-f45dd796=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        禁用状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-ecea4a30=""
      >
        <a
          aria-disabled="true"
          class="t-link t-link--primary t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--default t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--danger t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
      </div>
      <div
        class="tdesign-mobile-link-demo"
        data-v-ecea4a30=""
      >
        <a
          aria-disabled="true"
          class="t-link t-link--success t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="true"
          class="t-link t-link--warning t-link--medium t-link--disabled"
          data-v-ecea4a30=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-ecea4a30=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
      </div>
      
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        03 组件样式
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        链接尺寸
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-link-demo"
        data-v-81744b9c=""
      >
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--small"
          data-v-81744b9c=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             S跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-81744b9c=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--medium"
          data-v-81744b9c=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             M跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-81744b9c=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
        <a
          aria-disabled="false"
          class="t-link t-link--primary t-link--large"
          data-v-81744b9c=""
          target=""
        >
          <!---->
          <span
            class="t-link__content"
          >
            
             L跳转链接 
            
          </span>
          <span
            class="t-link__suffix-icon"
          >
            
            <svg
              class="t-icon t-icon-jump"
              data-v-81744b9c=""
              fill="none"
              height="1em"
              style="fill: none;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g
                id="jump"
              >
                <path
                  d="M9 4L4 4L4 20L20 20L20 15"
                  id="stroke1"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
                <path
                  d="M19.25 4.75L12 12M14 4H20L20 10"
                  id="stroke2"
                  stroke="currentColor"
                  stroke-linecap="square"
                  stroke-width="2"
                />
              </g>
            </svg>
            
          </span>
        </a>
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Link > Link prefixVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-00ec48a6=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium t-link--underline t-link--hover"
    data-v-00ec48a6=""
    target=""
  >
    <span
      class="t-link__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-link"
        data-v-00ec48a6=""
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="link"
        >
          <path
            d="M11.6762 6.99023L13.9998 4.6666C15.4726 3.19382 17.8604 3.19382 19.3332 4.6666C20.806 6.13938 20.806 8.52723 19.3332 10L17.0096 12.3236M6.98974 11.6766L4.66611 14.0003C3.19333 15.4731 3.19333 17.8609 4.66611 19.3337C6.13889 20.8065 8.52675 20.8065 9.99953 19.3337L12.3232 17.0101M13.9985 9.99989L9.99847 14"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </span>
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium"
    data-v-00ec48a6=""
    target=""
  >
    <span
      class="t-link__prefix-icon"
    >
      
      <svg
        class="t-icon t-icon-link"
        data-v-00ec48a6=""
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="link"
        >
          <path
            d="M11.6762 6.99023L13.9998 4.6666C15.4726 3.19382 17.8604 3.19382 19.3332 4.6666C20.806 6.13938 20.806 8.52723 19.3332 10L17.0096 12.3236M6.98974 11.6766L4.66611 14.0003C3.19333 15.4731 3.19333 17.8609 4.66611 19.3337C6.13889 20.8065 8.52675 20.8065 9.99953 19.3337L12.3232 17.0101M13.9985 9.99989L9.99847 14"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </span>
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <!---->
  </a>
</div>
`;

exports[`Link > Link statusVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-link-demo"
    data-v-ecea4a30=""
  >
    <a
      aria-disabled="true"
      class="t-link t-link--primary t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--default t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--danger t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
  </div>
  <div
    class="tdesign-mobile-link-demo"
    data-v-ecea4a30=""
  >
    <a
      aria-disabled="true"
      class="t-link t-link--success t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="true"
      class="t-link t-link--warning t-link--medium t-link--disabled"
      data-v-ecea4a30=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-ecea4a30=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
  </div>
  
</div>
`;

exports[`Link > Link suffixVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-a3d673c9=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium"
    data-v-a3d673c9=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-a3d673c9=""
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="jump"
        >
          <path
            d="M9 4L4 4L4 20L20 20L20 15"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
          <path
            d="M19.25 4.75L12 12M14 4H20L20 10"
            id="stroke2"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </span>
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium"
    data-v-a3d673c9=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
       跳转链接 
      
    </span>
    <span
      class="t-link__suffix-icon"
    >
      
      <svg
        class="t-icon t-icon-jump"
        data-v-a3d673c9=""
        fill="none"
        height="1em"
        style="fill: none;"
        viewBox="0 0 24 24"
        width="1em"
      >
        <g
          id="jump"
        >
          <path
            d="M9 4L4 4L4 20L20 20L20 15"
            id="stroke1"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
          <path
            d="M19.25 4.75L12 12M14 4H20L20 10"
            id="stroke2"
            stroke="currentColor"
            stroke-linecap="square"
            stroke-width="2"
          />
        </g>
      </svg>
      
    </span>
  </a>
</div>
`;

exports[`Link > Link themeVue demo works fine 1`] = `
<div
  data-v-app=""
>
  
  <div
    class="tdesign-mobile-link-demo"
    data-v-f45dd796=""
  >
    <a
      aria-disabled="false"
      class="t-link t-link--primary t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--default t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--danger t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
  </div>
  <div
    class="tdesign-mobile-link-demo"
    data-v-f45dd796=""
  >
    <a
      aria-disabled="false"
      class="t-link t-link--success t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
    <a
      aria-disabled="false"
      class="t-link t-link--warning t-link--medium"
      data-v-f45dd796=""
      target=""
    >
      <!---->
      <span
        class="t-link__content"
      >
        
         跳转链接 
        
      </span>
      <span
        class="t-link__suffix-icon"
      >
        
        <svg
          class="t-icon t-icon-jump"
          data-v-f45dd796=""
          fill="none"
          height="1em"
          style="fill: none;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g
            id="jump"
          >
            <path
              d="M9 4L4 4L4 20L20 20L20 15"
              id="stroke1"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
            <path
              d="M19.25 4.75L12 12M14 4H20L20 10"
              id="stroke2"
              stroke="currentColor"
              stroke-linecap="square"
              stroke-width="2"
            />
          </g>
        </svg>
        
      </span>
    </a>
  </div>
  
</div>
`;

exports[`Link > Link underlineVue demo works fine 1`] = `
<div
  class="tdesign-mobile-link-demo"
  data-v-215729b2=""
>
  <a
    aria-disabled="false"
    class="t-link t-link--primary t-link--medium t-link--underline"
    data-v-215729b2=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
  <a
    aria-disabled="false"
    class="t-link t-link--default t-link--medium t-link--underline t-link--hover"
    data-v-215729b2=""
    target=""
  >
    <!---->
    <span
      class="t-link__content"
    >
      
      跳转链接
      
    </span>
    <!---->
  </a>
</div>
`;
